--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "4.14.0",
     "react": "0.14.7",
+    "react-bootstrap": "0.30.5",
     "react-dom": "0.14.7"
   },
   "devDependencies": {
